--- a/chamada.html
+++ b/chamada.html
@@ -9,6 +9,7 @@
 <body>
 
 <div class="iphone vibrating" id="tela">
+
   <div class="topo">
     <p class="ligando">Chamada recebida</p>
     <h2 class="nome">@agente.codee</h2>
@@ -19,21 +20,33 @@
   <p class="status" id="status">iPhone</p>
   <p class="tempo" id="tempo">00:00</p>
 
+  <!-- INDICAÇÃO ARRASTAR -->
+  <div class="indicacao">
+    <p class="arraste-texto">Arraste para cima</p>
+    <div class="seta">⬆️</div>
+  </div>
+
+  <!-- BOTÕES -->
   <div class="botoes">
+
     <div class="botao recusar">
       <span>❌</span>
       <p>Recusar</p>
     </div>
 
-    <div class="botao atender" onclick="atender()">
-      <span>📞</span>
-      <p>Atender</p>
+    <!-- BOTÃO SLIDER -->
+    <div class="botao atender" id="slider">
+      <span class="icone">📞</span>
     </div>
+
   </div>
 </div>
 
-<audio id="audio" src="audio.mp3"></audio>
+<!-- 🔊 SOM DA VIBRAÇÃO -->
 <audio id="vibracao" src="vibracao.mp3" loop></audio>
+
+<!-- 🔊 SOM DA CHAMADA (ADICIONADO, ERA ISSO QUE FALTAVA) -->
+<audio id="audio" src="chamada.mp3"></audio>
 
 <script src="chamada.js"></script>
 </body>
